--- a/style.css
+++ b/style.css
@@ -5,36 +5,38 @@ html, body {
 
 nav {
     text-align: right;
-    vertical-align: top !important;
+    padding-top: 5px;
 }
 
 .nav-item {
     text-decoration: none;
     color: black;
-}
-
-.nav-space {
-    margin-right: 10px;
-}       
-
-.nav-text {
-    font-size: 20px;
-    padding-top: 10px;
-}
-
-.nav-icon {
-    padding-bottom: 5px;
-    color: darkslategrey;
+    font-size: 17px;
+    vertical-align: middle;
 }
 
 .nav-item:hover {
     text-decoration: underline;
 }
 
+.nav-space {
+    margin-right: 20px;
+}       
+
+.nav-icon {
+    margin-right: 20px;
+    font-size: 13.5px;
+    color: purple;
+    vertical-align: middle;
+}
+
+.nav-icon:hover {
+    color: mediumseagreen;
+}
 
 section {
     text-align: center;
-    margin-top: 140px;
+    margin-top: 120px;
 }
 
 .search-bar {
@@ -48,10 +50,19 @@ section {
     
 }
 
+input:hover {
+    box-shadow: 0.5px 0.5px gray;
+}
+
 input:focus {
     outline: none;
     border-radius: 20px;
     border: 1.5px solid lightskyblue;
+    box-shadow: 0 0;
+}
+
+.logo {
+    padding-bottom: 32px;
 }
 
 .container {
@@ -95,6 +106,11 @@ input:focus {
     color: grey;
 }
 
+.google-button:hover {
+    border: 0.5px solid lightslategray;
+    box-shadow: 0.5px 0.5px lightsteelblue;
+}
+
 footer {
     background-color: lavenderblush;
     padding-bottom: 8px;
@@ -110,12 +126,13 @@ footer {
     padding-bottom: 10px;
     color: grey;
     border-bottom: 1px solid lightgray;
+    border-top: 1px solid lightgray;
 }
 
 .footer-2 {
     padding-top: 10px;
     padding-left: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .footer-item {
